--- a/src/webui/_locales/es/messages.json
+++ b/src/webui/_locales/es/messages.json
@@ -3,9 +3,21 @@
         "message": "¡Por favor, háganos saber qué tal está funcionando Psiphon para usted de forma que podamos mejorar el sistema!",
         "description": "Text motivating the user to send Psiphon Inc. feedback."
     },
+    "settings#local-proxy-ports#error-modal-body-http": {
+        "message": "<p>\nHa configurado Psiphon para que use un puerto local específico para su propio proxy HTTP.<br>\nSin embargo, ese puerto parece estar ya en uso y por tanto Psiphon no puede usarlo.\n</p>\n<p>\nPor favor, cambie el valor configurado de puerto para proxy HTTP e inténtelo de nuevo. Recomendamos que deje en blanco el valor de forma que Psiphon pueda seleccionar automáticamente un puerto disponible.\n</p>",
+        "description": "Main text in the 'Local Proxy Port Conflict' dialog box. This is shown when the conflict is with the HTTP proxy port, rather than the SOCKS proxy port."
+    },
+    "settings#upstream-proxy#set-both-error-msg": {
+        "message": "Tiene que establecer tanto el Nombre del Servidor como el Puerto, o dejar ambos en blanco para selección automática.",
+        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
+    },
     "settings#egress-region#select-jp": {
         "message": "Japón",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
+    },
+    "settings#upstream-proxy#error-modal-body-configured": {
+        "message": "Ha configurado Psiphon para usar un \"proxy hacia Internet\".<br>\nSin embargo, parece que no podemos conectar al servidor Psiphon a través de ese proxy (interpuesto).<br>\nPor favor, arregle las configuraciones e inténtelo de nuevo.",
+        "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
     },
     "settings#error-alert": {
         "message": "<strong>¡Error!</strong> Por favor, repare los valores incorrectos antes de proseguir.",
@@ -27,9 +39,21 @@
         "message": "Configuración",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Settings' view. In that view the user can change the settings/options that change how Psiphon works."
     },
+    "settings#egress-region#error-modal-title": {
+        "message": "Región de servidor no disponible",
+        "description": "Title text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
+    },
+    "settings#upstream-proxy#error-modal-title": {
+        "message": "Proxy hacia Internet",
+        "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
+    },
     "connection#stopping-msg": {
         "message": "Psiphon está desconectando...",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
+    },
+    "settings#upstream-proxy#error-modal-body-default": {
+        "message": "Psiphon actualmente está configurado para usar el proxy de su sistema como su \"proxy hacia Internet\". <br>\nSin embargo, parece que no podemos conectar al servidor Psiphon a través de ese proxy (interpuesto).<br>\nPor favor, habilite \"No usar proxy hacia Internet\" e inténtelo de nuevo.<br>",
+        "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has not directly altered these settings (yet), but the default is causing a problem."
     },
     "feedback#success-message": {
         "message": "<strong>¡Gracias!</strong> Sus comentarios han sido enviados.",
@@ -71,6 +95,10 @@
         "message": "Muchos problemas pueden arreglarse descargando la versión más reciente. Puede <a class=\"NewVersionURL\" href=\"#\">descargar la última versión haciendo clic aquí</a>, o puede enviar un correo electrónico a <a class=\"NewVersionEmail\" href=\"#\"></a>.",
         "description": "Text telling the user that downloading a new version of Psiphon may be beneficial, and how to get a new version."
     },
+    "settings#local-proxy-ports#error-modal-body-socks": {
+        "message": "<p>\nHa configurado Psiphon para que use un puerto local específico para su propio proxy SOCKS.<br>\nSin embargo, ese puerto parece estar ya en uso y por tanto Psiphon no puede usarlo.\n</p>\n<p>\nPor favor, cambie el valor configurado de puerto para proxy SOCKS e inténtelo de nuevo. Recomendamos que deje en blanco el valor de forma que Psiphon pueda seleccionar automáticamente un puerto disponible.\n</p>",
+        "description": "Main text in the 'Local Proxy Port Conflict' dialog box. This is shown when the conflict is with the SOCKS proxy port, rather than the HTTP proxy port."
+    },
     "feedback#submit_button": {
         "message": "Enviar",
         "description": "Submit button text. If the user clicks it, their feedback will be sent to Psiphon Inc."
@@ -90,6 +118,14 @@
     "settings#egress-region#select-nl": {
         "message": "Países Bajos",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Netherlands will be used."
+    },
+    "general#modal-close-button": {
+        "message": "Cerrar",
+        "description": "Text in the button that dismisses a modal dialog. It is often the only button (no 'OK' or 'Cancel', etc.)."
+    },
+    "settings#upstream-proxy#error-modal-body-pre-message": {
+        "message": "Aquí está la información técnica del error:",
+        "description": "Preamble before the technical error message is shown in the 'Upstream Proxy Error' dialog box. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
     },
     "settings#local-proxy-ports#http-label": {
         "message": "HTTP/HTTPS",
@@ -115,6 +151,10 @@
         "message": "(No funciona en modo VPN)",
         "description": "If 'VPN mode' is enabled, this text is displayed under or beside settings which are incompatible with VPN mode and have been disabled because of it. It is intended to let the user know why the setting has been disabled."
     },
+    "settings#local-proxy-ports#unique-error-msg": {
+        "message": "Los puertos locales tienen que ser distintos entre si.",
+        "description": "Error message that shows if the HTTP local proxy port and SOCKS local proxy port are set to a value and are the same as each other. The local ports must be different from each other. Or one or both of the fields can be empty, which means 'automatic selection'."
+    },
     "settings#vpn-incompatible-label": {
         "message": "VPN",
         "description": "If 'VPN mode' is enabled, this text shows up in a label beside the Settings sections which are incompatible with VPN mode. It is intended to draw the user's attention to the fact that some of the other settings have become disabled."
@@ -135,9 +175,17 @@
         "message": "Detener",
         "description": "Text on the big connection button telling the user that if they click it, they will stop trying to connect to the network. This is shown to the user when they are trying to connect."
     },
+    "settings#egress-region#error-modal-body-http": {
+        "message": "Ha configurado Psiphon para que use un servidor en una región específica.<br>\nSin embargo, esa región ya no está disponible.<br>\nTiene que escoger una nueva región o cambiar a la elección predeterminada \"El mejor rendimiento\".",
+        "description": "Descriptive body text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
+    },
     "feedback#text_feedback_bottom_para": {
         "message": "Si el formulario de arriba no está funcionando, o si desea enviar capturas de pantalla, por favor, escríbanos un correo a <a id=\"FeedbackEmailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>.",
         "description": "Message showing the user an email they can use to contact Psiphon Inc."
+    },
+    "settings#local-proxy-ports#error-modal-title": {
+        "message": "Conflicto de puerto de proxy local",
+        "description": "Title of the message box showing the error message when it is detected that the user has chosen a local proxy port (either HTTP or SOCKS) that is already in use and therefore can't be used by Psiphon."
     },
     "connection#disconnect-btn": {
         "message": "Desconectar",
@@ -182,6 +230,10 @@
     "settings#split-tunnel#heading": {
         "message": "Dividir túnel",
         "description": "Settings section heading. If the user clicks this, the 'Split Tunnel' section will expand and can be edited. If 'split tunnel' is enabled, if the user is trying to get to a website in his/her own country, they will connect to it directly, instead of through Psiphon."
+    },
+    "settings#egress-region#invalid-error-msg": {
+        "message": "Escoja una región válida de servidor Psiphon.",
+        "description": "Error message that is visible when the 'Psiphon Server Region' setting is invalid or not yet set."
     },
     "settings#transport-mode#check-label": {
         "message": "Usar modo VPN",
